# protoc-plugin

./: .prototools  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  lib.rs  proto.rs  version.rs
tests/: download_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
tests/snapshots/: shims_test__creates_shims.snap
