[package]
name = "protoc_tool"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
serde = "1.0.214"
extism-pdk = "1.3.0"
schematic = { version = "*", default-features = false, features = ["schema"] }
proto_pdk = "0.25.2"

[dev-dependencies]
proto_pdk_test_utils = "0.30.3"
starbase_sandbox = "0.7.4"
tokio = { version = "1.41.1", features = ["full"] }

[features]
default = ["wasm"]
wasm = []

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
